deploy/glvis-server/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: laghos-demo
  labels:
    app.kubernetes.io/name: laghos-demo
    app.kubernetes.io/part-of: laghos-sedov-demo
